--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -3,7 +3,7 @@ name: Checks
 
 on: [push]
 
-jobs: 
+jobs:
   test-lint:
     name: Test and Lint
     runs-on: ubuntu-20.04
@@ -11,11 +11,11 @@ jobs:
       - name: Login to Docker Hub
         uses: docker/login-action@v1
         with:
-          username: ${{ secretes.DOCKERHUB_USER }}
-          password: ${{ secretes.DOCKERHUB_TOKEN }}
+          username: ${{ secrets.DOCKERHUB_USER }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
       - name: Checkout
-        uses: actions.checkout@v2 
+        uses: actions/checkout@v2
       - name: Test
         run: docker-compose run --rm app sh -c "python manage.py test"
-      - name : Lint
-        run : docker-compose run --rm app sh -c "flak8"
+      - name: Lint
+        run: docker-compose run --rm app sh -c "flake8"
